tests/fixtures/invalid/bool_attribute.py
# Bool does not support attribute access
x: bool = True
y: int = x.foo
